# graph-rag-drug-interaction

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  main.py  requirements.txt
api/: main.py  schemas.py
backend/: .dockerignore  Dockerfile  imports.txt  pyproject.toml  test_brat.py
backend/api/: main.py  schemas.py
backend/api/routes/: graph.py  query.py
backend/api/static/: index.html
backend/api/static/assets/: index-CuxNg6MI.js  index-DJXr7tpZ.css  index-ibHqVX7e.js  index-lFwa8rWO.css
backend/config/: settings.py
backend/graph/: graph_builder.py  graph_queries.py  neo4j_client.py
backend/ingestion/: brat_parser.py  pipeline.py  xml_parser.py
backend/reasoning/: llm_client.py  prompts.py  rag_chain.py
backend/retrieval/: vector_retriever.py
backend/scripts/: check_progress.py  ingest_ddicopus.py  ingest_pdfs.py  query_cli.py  setup_neo4j_schema.py
backend/tests/: conftest.py  test_brat_parser.py  test_entity_extractor.py  test_hybrid_retriever.py  test_rag_chain.py  test_xml_parser.py
config/: settings.py
embeddings/: embedder.py  faiss_store.py  neo4j_vector_store.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
graph/: graph_builder.py  graph_queries.py  schema.py
ingestion/: chunker.py  document_loader.py  entity_extractor.py  pipeline.py  relation_extractor.py  xml_parser.py
reasoning/: answer_validator.py  prompts.py
retrieval/: context_assembler.py  graph_retriever.py  hybrid_retriever.py
scripts/: ingest_ddicopus.py
tests/: test_graph_builder.py
(+20 files in other folders)
