[project]
name = "biomedical-graphrag"
version = "0.1.0"
description = "Biomedical Hybrid Graph-RAG for drug-drug interaction reasoning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "config*",
  "ingestion*",
  "graph*",
  "embeddings*",
  "retrieval*",
  "reasoning*",
  "api*",
]
